##Text encoding: utf-8

2011-08-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* pixmaps/Makefile.am: install scalable icons instead of bitmaps.
	* programs/crystal/prefs.cc: made it instant apply.
	* programs/crystal/prefs.h: ditto.
	* ui/crystal/docprop.ui: minor fix.
	* ui/crystal/prefs.ui: made it instant apply.

2011-08-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/celldlg.cc: made it instant apply.
	* libs/gcr/celldlg.h: ditto.
	* pixmaps/gchem3d.svg: new svg icon, thanks to Matthias Mailänder.
	* pixmaps/gchemcalc.svg: ditto.
	* pixmaps/gchempaint.svg: ditto.
	* pixmaps/gchemtable.svg: ditto.
	* pixmaps/gcrystal.svg: ditto.
	* pixmaps/gspectrum.svg: ditto.

2011-08-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.13.5).
	* libs/gcr/celldlg.cc: start cell dialog reimplementation.
	* libs/gcr/document.cc: ditto.
	* programs/crystal/document.cc: ditto.
	* ui/crystal/cell.ui: ditto.

2011-08-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: no more tar.gz package.
	* libs/gcr/grid.cc: fixed decimal separator handling.
	* libs/gcr/Makefile.am: fixed include path for generated header.
	* libs/gcu/loader.cc: don't crash when using default application.
	* mozilla-plugin/chem-viewer.cc: make it build.
	* mozilla-plugin/moz-plugin.c: make it work with latest firefox.
	* plugins/paint/atoms/plugin.cc: add missing fields.

2011-08-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: cleaned.
	* libs/gcr/sizedlg.cc: make size dialog instant apply.
	* libs/gcr/sizedlg.h: ditto.
	* ui/crystal/size.ui: ditto.

2011-08-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: really support booleans.
	* libs/gcr/line.h: make members more accessible.
	* libs/gcr/linesdlg.cc: make it work.
	* libs/gcr/linesdlg.h: ditto.

2011-08-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/line.cc: add new SetColor(GdkRGBA) method.
	* libs/gcr/line.h: ditto.